Link the work namespace to api.ci and prune it from generic meta
PR authors can now jump directly to the console if they have access.

--- a/gubernator-rh/templates/build.html
+++ b/gubernator-rh/templates/build.html
@@ -48,6 +48,9 @@
 		% if 'jenkins-node' in started
 			<tr><td>Builder<td>{{started['jenkins-node']}}
 		% endif
+		% if work_namespace
+			<tr><td>Work namespace<td><a href="https://api.ci.openshift.org/console/project/{{work_namespace}}/browse/pods">{{work_namespace}}</a>
+		% endif
 		% if refs
 			<tr><td>Refs<td>
 			% for name, sha in refs
