--- a/gubernator-rh/templates/build.html
+++ b/gubernator-rh/templates/build.html
@@ -63,20 +63,11 @@
 			{%- endfor %}
 		% endif
 
-		% if 'metadata' in started
-			% for k, v in started['metadata']|dictsort
-				% if v
-					<tr><td>{{k}}<td>{{v|maybe_linkify}}
-				% endif
-			% endfor
-		% endif
-		% if finished and 'metadata' in finished and finished['metadata']
-			% for k, v in finished['metadata']|dictsort
-				% if v
-					<tr><td>{{k}}<td>{{v|maybe_linkify}}
-				% endif
-			% endfor
-		% endif
+		% for k, v in metadata|dictsort
+			% if v
+				<tr><td>{{k}}<td>{{v|maybe_linkify}}
+			% endif
+		% endfor
 
 	% endif
 	</table>
