Switch console link to modern console

--- a/gubernator-rh/templates/build.html
+++ b/gubernator-rh/templates/build.html
@@ -49,7 +49,7 @@
 			<tr><td>Builder<td>{{started['jenkins-node']}}
 		% endif
 		% if work_namespace
-			<tr><td>Work namespace<td><a href="https://api.ci.openshift.org/console/project/{{work_namespace}}/browse/pods">{{work_namespace}}</a>
+			<tr><td>Work namespace<td><a href="https://console.svc.ci.openshift.org/k8s/ns/{{work_namespace}}/pods">{{work_namespace}}</a>
 		% endif
 		% if refs
 			<tr><td>Refs<td>
